--- a/designed-applications-page.html
+++ b/designed-applications-page.html
@@ -4,13 +4,12 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bootstrap - Prebuilt Layout</title>
+    <title>Application Dashboard</title>
 
     <!-- Bootstrap -->
     <link href="/css/bootstrap-4.3.1.css" rel="stylesheet">
 
-	  
-	  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
 
@@ -83,10 +82,6 @@ thead tr #bookmark-column {
 			margin-top: 20px;
 			
 		}
-		.col-sm-3 {
-			text-align: center;
-			vertical-align: middle;
-		}
 
 
 	</style>
@@ -98,33 +93,27 @@ thead tr #bookmark-column {
 			<input class="form-control" id="myInput" type="text" placeholder="Filter Through Applicants Here...">
 	<!--END FILTER TEXT BOX-->
 	
-   <table id="userdata" class="application-entries" style="border: solid 1px black; width: 0px;" align="center">
-	   <thead>
-		   <tr>
-        <th onclick="sortTable(0)">Name <span class="glyphicon glyphicon-chevron-down" style="font-size: 10px"></span></th>
-        <th onclick="sortTable(1)">Application Date  <span class="glyphicon glyphicon-chevron-down" style="font-size: 10px"></span></th>
-        <th onclick="sortTable(2)">Position <span class="glyphicon glyphicon-chevron-down" style="font-size: 10px"></span></th>
-		<th onclick="sortTable(3)">Experience <span class="glyphicon glyphicon-chevron-down" style="font-size: 10px"></span></th>
-	 	<th id="bookmark-column"></th>
-		   </tr>
-	   </thead>
-	   <tbody>
-	   </tbody>
+<table id="userdata" class="application-entries" style="border: solid 1px black; width: 0px;" align="center">
+	   		<thead>
+		   	<tr>
+        			<th onclick="sortTable(0)">Name <span class="glyphicon glyphicon-chevron-down" style="font-size: 10px"></span></th>
+        			<th onclick="sortTable(1)">Application Date  <span class="glyphicon glyphicon-chevron-down" style="font-size: 10px"></span></th>
+       				<th onclick="sortTable(2)">Position <span class="glyphicon glyphicon-chevron-down" style="font-size: 10px"></span></th>
+				<th onclick="sortTable(3)">Experience <span class="glyphicon glyphicon-chevron-down" style="font-size: 10px"></span></th>
+	 			<th id="bookmark-column"></th>
+		   	</tr>
+	   		</thead>
+	  		<tbody>
+	  		</tbody>
   </table>
 	
 
 	
-	<div class="more-details offset-xl-1 col-xl-10" id="moredetails">
+<div class="more-details offset-xl-1 col-xl-10" id="moredetails">
 	<div style="margin-top: 30px;" class="container" id="userdata2">
 		<h4>Applicant Interview Answers and Availability</h4>
-</div>
-	
 	</div>
-	<!--===================start popover information===============-->
-	
-	
-	
-	<!--=============end popoverinformation-->
+</div>
 	
 	<!--======================START FILTERING SCRIPT================================
 This filter will return Applicant Rows that meet the filter -- The data that is filtered is everything in the tbody (all of the text) 
