Updated Table and Column Widths

--- a/designed-applications-page.html
+++ b/designed-applications-page.html
@@ -67,7 +67,7 @@
 	width: 200px;
 		}
 thead tr #bookmark-column {
-	width: 110px;
+	width: 150px;
 }
 		thead {
 			border-bottom: solid black 2px;
@@ -93,7 +93,7 @@ thead tr #bookmark-column {
 			<input class="form-control" id="myInput" type="text" placeholder="Filter Through Applicants Here...">
 	<!--END FILTER TEXT BOX-->
 	
-<table id="userdata" class="application-entries" style="border: solid 1px black; width: 0px;" align="center">
+<table id="userdata" class="application-entries" style="border: solid 1px black;" align="center">
 	   		<thead>
 		   	<tr>
         			<th onclick="sortTable(0)">Name <span class="glyphicon glyphicon-chevron-down" style="font-size: 10px"></span></th>
